--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "stock-market",
+  "name": "super-simple-stock-market",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-testing-library": "^7.0.0",
+    "reduce-reducers": "^1.0.4",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
