--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "postcss-cli": "^6.1.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
     "react-scripts": "3.0.1",
     "react-testing-library": "^7.0.0",
     "reduce-reducers": "^1.0.4",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8"
   },
   "scripts": {
     "start": "npm-run-all --parallel watch:css start:react",
