--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "autoprefixer": "^9.5.1",
+    "mathjs": "^5.10.3",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^6.1.2",
     "react": "^16.8.6",
