--- a/package.json
+++ b/package.json
@@ -3,18 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "@typescript-eslint/parser": "^1.9.0",
+    "@typescript-eslint/typescript-estree": "^1.9.0",
     "autoprefixer": "^9.5.1",
+    "eslint": "^5.16.0",
     "mathjs": "^5.10.3",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^6.1.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
-    "react-scripts": "3.0.1",
-    "react-testing-library": "^7.0.0",
+    "react-scripts": "^3.0.1",
     "reduce-reducers": "^1.0.4",
     "redux": "^4.0.1",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "tsutils": "^3.14.0",
+    "typescript": "^3.5.1"
   },
   "scripts": {
     "start": "npm-run-all --parallel watch:css start:react",
@@ -42,9 +47,10 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^8.0.1",
     "@testing-library/dom": "^5.1.1",
-    "jest-dom": "^3.4.0",
-    "tailwindcss": "^1.0.1",
-    "user-event": "^3.0.3"
+    "@testing-library/user-event": "^4.1.0",
+    "jest-dom": "^3.5.0",
+    "tailwindcss": "^1.0.1"
   }
 }
