--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "autoprefixer": "^9.5.1",
     "eslint": "^5.16.0",
     "mathjs": "^5.10.3",
+    "normalizr": "^3.4.0",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^6.1.2",
     "react": "^16.8.6",
